--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
             <a href="" class="btn">Download CV</a>
         </div>
         <div class="home-image">
-            <img src="assets/image1.png" alt="">
+            <img src="image1.png" alt="">
         </div>
     </section>
     <!-- abut section -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="assets/sedit2.png" alt="">
+            <img src="sedit2.png" alt="">
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
